infrastructure/common/monitoring/grafana-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-public
  namespace: monitoring
spec:
  selector:
    app: grafana
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: LoadBalancer
  loadBalancerIP: "${grafana_ip}"
